Support data-src default stream attributes

--- a/frontend/embed.html
+++ b/frontend/embed.html
@@ -6,7 +6,7 @@
     <title>Device Stream</title>
     <link rel="stylesheet" href="/static/embed.css" />
   </head>
-  <body data-default-stream="http://10.160.13.110:8099/stream/android/R5CT44LW5LX">
+  <body data-src="http://10.160.13.110:8099/stream/android/R5CT44LW5LX">
     <div class="embed-shell">
       <button type="button" class="embed-close" data-close aria-label="Close stream view">
         <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" class="embed-close__icon">
