Update embedded stream fallback

--- a/frontend/embed.html
+++ b/frontend/embed.html
@@ -6,7 +6,7 @@
     <title>Device Stream</title>
     <link rel="stylesheet" href="/static/embed.css" />
   </head>
-  <body data-src="http://10.160.13.110:8099/stream/android/R5CT44LW5LX">
+  <body data-src="http://10.160.13.110:8099/stream/android/RFCN80T4GDJ">
     <div class="embed-shell">
       <button type="button" class="embed-close" data-close aria-label="Close stream view">
         <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" class="embed-close__icon">
@@ -29,7 +29,14 @@
               stream.
             </p>
           </div>
-          <img id="embed-stream" class="embed-stream" alt="Device stream" />
+          <img
+            id="embed-stream"
+            class="embed-stream"
+            alt="Device stream"
+            style="display: block; -webkit-user-select: none; margin: auto; background-color: hsl(0, 0%, 25%);"
+            width="212"
+            height="472"
+          />
         </div>
       </div>
     </div>
