--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,24 +151,21 @@
     <div id="toast" role="status" aria-live="polite"></div>
 
     <div id="stf-session-container" class="stf-session" hidden>
-      <div class="stf-session__header">
-        <div class="stf-session__meta">
-          <h2 id="stf-session-title" class="stf-session__title"></h2>
-          <p id="stf-session-subtitle" class="stf-session__subtitle" hidden></p>
-          <p id="stf-session-status" class="stf-session__status" hidden></p>
-        </div>
+      <div class="stf-session__content">
+        <p id="stf-session-message" class="stf-session__message" hidden></p>
+        <iframe
+          id="stf-session-frame"
+          class="stf-session__frame"
+          title="STF session frame"
+          allow="clipboard-read; clipboard-write; fullscreen"
+          referrerpolicy="no-referrer"
+        ></iframe>
+      </div>
+      <div class="stf-session__footer">
         <button type="button" id="stf-session-close" class="button button--secondary">
           End session
         </button>
       </div>
-      <p id="stf-session-message" class="stf-session__message" hidden></p>
-      <iframe
-        id="stf-session-frame"
-        class="stf-session__frame"
-        title="STF session frame"
-        allow="clipboard-read; clipboard-write; fullscreen"
-        referrerpolicy="no-referrer"
-      ></iframe>
     </div>
 
     <div
